# matrixfilereader

./: .gitattributes  CMakeLists.txt  Doxyfile  INSTALL.TXT  INSTALL.txt  License.txt  Operation-Template-Generator.pxp  Readme-Compilation.txt  Readme.md  XFUNC1.c  XFUNC1.h  XFUNC1.r  XFUNC1.rc  XFUNC1WinCustom.rc  api-description.h  api-layout.c  api-layout.h  changelog  changelog.txt  create-igor-xop-files.pl  create-public-release.sh  error-codes.h  functionBodys.cpp  functionBodys.h  matrixfilereader Help.ihf  matrixfilereader-basic-gui.pxp  resourceFile.rc  tags
VC8/: .clang-format  .gitignore  ForwardDecl.hpp  MatrixFileReader.sln  MatrixFileReader.vcproj  MatrixFileReader.vcxproj  XFUNC1 Help.ihf  XFUNC1.cpp  XFUNC1.h  XFUNC1.sln  XFUNC1.vcproj  XFUNC1.xop  XFUNC1WinCustom.rc  XOPSupport-changes-for-MFC-DLLs-1.patch  bricklet.cpp  bricklet.hpp  brickletClass.cpp  brickletClass.h  brickletclass.cpp  brickletclass.h  brickletclass.hpp  brickletconverter.cpp  brickletconverter.h  brickletconverter.hpp  constants.h  constants.hpp  copyfiles-x64.bat  copyfiles.bat  custom.rc  dataclass.cpp  dataclass.h  datahandling.cpp  datahandling.h  dll-stuff.cpp  dll-stuff.h  dllhandler.cpp  dllhandler.h  dllhandler.hpp  encoding_conversion.cpp  encoding_conversion.hpp  (+76 more)
VC8/XOPSupport/: CMakeLists.txt
public-releases/: matrixFileReaderXOP-v0.18-WIP.rar  matrixFileReaderXOP-v0.18.1.rar  matrixFileReaderXOP-v0.19-beta2.rar
regression_tests/: JU_mfr-testing_2020-07-30_20-16-50.xml  RegressionTest.ipf  Test_BrickletConversionDetails.ipf  Test_CheckForNewBricklets.ipf  Test_CloseResultFile.ipf  Test_CreateOverviewTable.ipf  Test_GetBrickletCount.ipf  Test_GetBrickletData.ipf  Test_GetBrickletDeployData.ipf  Test_GetBrickletMetaData.ipf  Test_GetBrickletRawData.ipf  Test_GetReportTemplate.ipf  Test_GetResultFileMetaData.ipf  Test_GetResultFileName.ipf  Test_GetVernissageVersion.ipf  Test_GetVersion.ipf  Test_GetXOPErrorMessage.ipf  Test_Main.ipf  (+3 more)
(+284 files in other folders)
